--- a/tramites/src/main/webapp/WEB-INF/web.xml
+++ b/tramites/src/main/webapp/WEB-INF/web.xml
@@ -29,7 +29,10 @@
         <param-name>primefaces.PUBLIC_CAPTCHA_KEY</param-name>
         <param-value>6LcTegATAAAAAOCD_GmUjRWjqJ97fPSny6SlJ2Fk</param-value>
     </context-param>
-    
+    <context-param>
+        <param-name>primefaces.CSP_POLICY</param-name>
+        <param-value>script-src 'self' https: *.googleapis.com</param-value>
+    </context-param>
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
